--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -29,7 +29,7 @@
         });
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKjHVwwawW0UApYTwq6LIzQ5-diChLnRM&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOURKEY&callback=initMap"
     async defer></script>
 
 
